Name:                  yocto
Version:               1.0.1
Author:                Alvaro J. Genial
Maintainer:            ajg
Homepage:              https://github.com/ajg/yocto
Synopsis:              A Minimal JSON Parser & Printer for Haskell
Description:           Hassle-free, fast, lossless encoding & decoding of JSON.
License:               MIT
License-File:          LICENSE.md
Category:              Text
Build-type:            Simple
Cabal-version:         >= 1.8

Library
  Exposed-modules:     Text.JSON.Yocto
  Build-depends:       base >= 4 && < 5, containers, parsec

Test-suite tests
  Hs-Source-Dirs:       .
  Main-Is:              Test.hs
  Type:                 exitcode-stdio-1.0
  Build-Depends:        base, containers, parsec, yocto, QuickCheck,
                        quickcheck-instances

source-repository head
  type:                git
  location:            https://github.com/ajg/yocto/tree/master
